--- a/src/main/webapp/resources/uploadcss/list.css
+++ b/src/main/webapp/resources/uploadcss/list.css
@@ -121,12 +121,13 @@ td {
 	display:inline-block;
 	width : 25px;
 	height: 25px;
-	background-color : #a0a0a0;
+	background-color : #7B68EE;
 	color : white;
 	
 	text-align: center;
 	text-decoration: none;
 }
+
 tfoot > td {
 	text-align: center;
 	border: none;
