--- a/src/main/webapp/resources/uploadcss/write_edit.css
+++ b/src/main/webapp/resources/uploadcss/write_edit.css
@@ -32,8 +32,8 @@
 	line-height: 30px;
 	text-align: center;
 	background: #FFF;
-	border: 1px solid #c8c8c8;
-	color: #464646;
+	border: 1px solid #7B68EE;
+	color: #7B68EE;
 	font-size: 11px;
 	margin: 1px;
 }
@@ -46,8 +46,8 @@
 	box-sizing: border-box;
 	line-height: 30px;
 	text-align: center;
-	background: #5a5a5a;
-	border: 1px solid #5a5a5a;
+	background: #7B68EE;
+	border: 1px solid #7B68EE;
 	color: #F9FFFF;
 	font-size: 11px;
 	margin: 1px;
