--- a/src/main/webapp/resources/uploadcss/list.css
+++ b/src/main/webapp/resources/uploadcss/list.css
@@ -61,6 +61,7 @@ tr {
 	border-color: inherit;
 	font-size: 13px;
 	font-weight: 800px;
+	height:30px;
 }
 
  .mouse_hover_tit_a:hover .a_hover_tit{
