--- a/src/main/webapp/resources/uploadcss/detail.css
+++ b/src/main/webapp/resources/uploadcss/detail.css
@@ -100,6 +100,48 @@
 	border-radius: 5px;
 }
 
+#btn_add_comment:hover {
+	display:block;
+	width : 80px;
+	height : 44px;
+	position: absolute;
+	right: 0;
+	margin-right: 10px;
+	background-color: #FFA01E;
+	color:#fff;
+	border: none;
+	border-radius: 5px;
+	transition: background-color 5s;
+}
+
+/* REPRY */
+.reply_writer {
+	font-weight: 700;
+}
+.btn_reply {
+	background-color: #B7A4EE;
+	width: 30px;
+	height:17px;
+	color:white;
+	border: none;
+	border-radius: 3px;
+	margin: 2px;
+}
+.btn_reply:hover {
+	background-color: #FFA01E;
+	width: 30px;
+	height:17px;
+	color:white;
+	border: none;
+	border-radius: 3px;
+	margin: 2px;
+	transition: background-color 3s;
+}
+.reply_button_scope {
+	text-align: right;
+	display: inline-block;
+}
+
 /* BLIND */
 .blind {
 	display: none;
@@ -114,7 +156,7 @@
 	box-sizing: border-box;
 	line-height: 30px;
 	text-align: center;
-	background: #B4B4FF;
+	background: #8F7CEE;
 	border: 1px solid #c8c8c8;
 	color: #fff;
 	font-size: 11px;
@@ -128,11 +170,13 @@
 	box-sizing: border-box;
 	line-height: 30px;
 	text-align: center;
-	background: #7B68EE;
+	background: #FFA01E;
 	border: 1px solid #c8c8c8;
 	color: #fff;
 	font-size: 11px;
 	margin: 1px;
+	transition: background-color 5s;
+	
 }
 .btn_location {
 	text-align: right;
