--- a/src/main/webapp/resources/uploadcss/detail.css
+++ b/src/main/webapp/resources/uploadcss/detail.css
@@ -63,14 +63,14 @@
 	cursor:pointer;
 }
 #cnt:hover {
-	color:#7B68EE;
+	color:#D5C2EE;
 }
 .attach_location {
 	text-align: right;
 }
 
 .attachFile:hover {
-	color:#C1AEEE;
+	color:#D5C2EE;
 }
 
 /* COMMENT */
@@ -83,8 +83,8 @@
 	width : 700px;
 	height : 40px;
 	position: absolute;
-	border: 1px solid #7B68EE;
-	outline-color: #7B68EE;
+	border: 1px solid #D5C2EE;
+	outline-color: #D5C2EE;
 	border-radius: 3px;
 }
 #btn_add_comment {
@@ -94,7 +94,7 @@
 	position: absolute;
 	right: 0;
 	margin-right: 10px;
-	background-color: #7B68EE;
+	background-color: #D5C2EE;
 	color:#fff;
 	border: none;
 	border-radius: 5px;
@@ -107,7 +107,7 @@
 	position: absolute;
 	right: 0;
 	margin-right: 10px;
-	background-color: #FFA01E;
+	background-color: #7B68EE;
 	color:#fff;
 	border: none;
 	border-radius: 5px;
@@ -119,7 +119,7 @@
 	font-weight: 700;
 }
 .btn_reply {
-	background-color: #B7A4EE;
+	background-color: #D5C2EE;
 	width: 30px;
 	height:17px;
 	color:white;
@@ -128,7 +128,7 @@
 	margin: 2px;
 }
 .btn_reply:hover {
-	background-color: #FFA01E;
+	background-color: #7B68EE;
 	width: 30px;
 	height:17px;
 	color:white;
@@ -156,8 +156,8 @@
 	box-sizing: border-box;
 	line-height: 30px;
 	text-align: center;
-	background: #8F7CEE;
-	border: 1px solid #c8c8c8;
+	background: #D5C2EE;
+	border: none;
 	color: #fff;
 	font-size: 11px;
 	margin: 1px;
@@ -170,8 +170,8 @@
 	box-sizing: border-box;
 	line-height: 30px;
 	text-align: center;
-	background: #FFA01E;
-	border: 1px solid #c8c8c8;
+	background: #7B68EE;
+	border: none;
 	color: #fff;
 	font-size: 11px;
 	margin: 1px;
